frontend/lib/src/ffi/krkr2_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings to the KrKr2 Engine C-API.
class KrKr2Bindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  KrKr2Bindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  KrKr2Bindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// ---------------------------------------------------------------------------
  /// Engine initialization and shutdown
  /// ---------------------------------------------------------------------------
  bool krkr2_init(int argc, ffi.Pointer<ffi.Pointer<ffi.Char>> argv) {
    return _krkr2_init(argc, argv);
  }

  late final _krkr2_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>)
        >
      >('krkr2_init');
  late final _krkr2_init = _krkr2_initPtr
      .asFunction<bool Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  void krkr2_shutdown() {
    return _krkr2_shutdown();
  }

  late final _krkr2_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('krkr2_shutdown');
  late final _krkr2_shutdown = _krkr2_shutdownPtr.asFunction<void Function()>();

  /// ---------------------------------------------------------------------------
  /// Frame updating
  /// Called once per frame from the host application's main loop.
  /// Pumps SDL events and drives the engine's per-frame logic.
  /// ---------------------------------------------------------------------------
  void krkr2_tick() {
    return _krkr2_tick();
  }

  late final _krkr2_tickPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'krkr2_tick',
  );
  late final _krkr2_tick = _krkr2_tickPtr.asFunction<void Function()>();

  /// ---------------------------------------------------------------------------
  /// Input and Events
  /// Push synthesized input events into the engine from the host (Flutter, etc.)
  /// ---------------------------------------------------------------------------
  void krkr2_push_mouse_event(int type, int button, int x, int y) {
    return _krkr2_push_mouse_event(type, button, x, y);
  }

  late final _krkr2_push_mouse_eventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int)
        >
      >('krkr2_push_mouse_event');
  late final _krkr2_push_mouse_event = _krkr2_push_mouse_eventPtr
      .asFunction<void Function(int, int, int, int)>();

  void krkr2_push_key_event(int type, int keycode) {
    return _krkr2_push_key_event(type, keycode);
  }

  late final _krkr2_push_key_eventPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'krkr2_push_key_event',
      );
  late final _krkr2_push_key_event = _krkr2_push_key_eventPtr
      .asFunction<void Function(int, int)>();

  /// ---------------------------------------------------------------------------
  /// Window management
  /// krkr2_get_window_count() returns the number of open engine windows.
  /// krkr2_get_native_window()  returns the SDL_Window* (as void*) for the
  /// primary engine window; returns NULL if none is open yet.
  /// ---------------------------------------------------------------------------
  int krkr2_get_window_count() {
    return _krkr2_get_window_count();
  }

  late final _krkr2_get_window_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('krkr2_get_window_count');
  late final _krkr2_get_window_count = _krkr2_get_window_countPtr
      .asFunction<int Function()>();

  ffi.Pointer<ffi.Void> krkr2_get_primary_native_window() {
    return _krkr2_get_primary_native_window();
  }

  late final _krkr2_get_primary_native_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
        'krkr2_get_primary_native_window',
      );
  late final _krkr2_get_primary_native_window =
      _krkr2_get_primary_native_windowPtr
          .asFunction<ffi.Pointer<ffi.Void> Function()>();

  /// ---------------------------------------------------------------------------
  /// Headless / Windowless Support
  /// ---------------------------------------------------------------------------
  void krkr2_set_game_path(ffi.Pointer<ffi.Char> path) {
    return _krkr2_set_game_path(path);
  }

  late final _krkr2_set_game_pathPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'krkr2_set_game_path',
      );
  late final _krkr2_set_game_path = _krkr2_set_game_pathPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void krkr2_set_log_callback(krkr2_log_callback_t callback) {
    return _krkr2_set_log_callback(callback);
  }

  late final _krkr2_set_log_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(krkr2_log_callback_t)>>(
        'krkr2_set_log_callback',
      );
  late final _krkr2_set_log_callback = _krkr2_set_log_callbackPtr
      .asFunction<void Function(krkr2_log_callback_t)>();

  /// ---------------------------------------------------------------------------
  /// Display queries
  /// ---------------------------------------------------------------------------
  void krkr2_get_window_size(
    ffi.Pointer<ffi.Int> width,
    ffi.Pointer<ffi.Int> height,
  ) {
    return _krkr2_get_window_size(width, height);
  }

  late final _krkr2_get_window_sizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)
        >
      >('krkr2_get_window_size');
  late final _krkr2_get_window_size = _krkr2_get_window_sizePtr
      .asFunction<void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)>();

  /// Set the global renderer interface implemented by the platform (Flutter/SDL)
  void krkr2_set_renderer_interface(
    ffi.Pointer<krkr2_renderer_interface_t> renderer,
  ) {
    return _krkr2_set_renderer_interface(renderer);
  }

  late final _krkr2_set_renderer_interfacePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<krkr2_renderer_interface_t>)
        >
      >('krkr2_set_renderer_interface');
  late final _krkr2_set_renderer_interface = _krkr2_set_renderer_interfacePtr
      .asFunction<void Function(ffi.Pointer<krkr2_renderer_interface_t>)>();
}

typedef krkr2_log_callback_tFunction =
    ffi.Void Function(ffi.Int level, ffi.Pointer<ffi.Char> message);
typedef Dartkrkr2_log_callback_tFunction =
    void Function(int level, ffi.Pointer<ffi.Char> message);

/// ---------------------------------------------------------------------------
/// Logging & Debugging
/// ---------------------------------------------------------------------------
/// Log levels: 0 = Info, 1 = Warning, 2 = Error, 3 = Important
typedef krkr2_log_callback_t =
    ffi.Pointer<ffi.NativeFunction<krkr2_log_callback_tFunction>>;

/// Opaque handle to the window and renderer
typedef krkr2_window_t = ffi.Pointer<ffi.Void>;
typedef krkr2_renderer_t = ffi.Pointer<ffi.Void>;
typedef krkr2_texture_t = ffi.Pointer<ffi.Void>;

/// Render Interface Callbacks
final class krkr2_renderer_interface extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<
      krkr2_texture_t Function(ffi.Int width, ffi.Int height, ffi.Int format)
    >
  >
  create_texture;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        krkr2_texture_t tex,
        ffi.Pointer<ffi.Void> pixels,
        ffi.Int pitch,
      )
    >
  >
  update_texture;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(krkr2_texture_t tex)>
  >
  destroy_texture;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> clear;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        krkr2_texture_t tex,
        ffi.Int x,
        ffi.Int y,
        ffi.Int w,
        ffi.Int h,
      )
    >
  >
  draw_texture;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> present;
}

typedef krkr2_renderer_interface_t = krkr2_renderer_interface;
